--- a/_config.yml
+++ b/_config.yml
@@ -9,14 +9,14 @@ pygments: true
 # Themes are encouraged to use these universal variables 
 # so be sure to set them if your theme uses them.
 #
-title : Jekyll Bootstrap
-tagline: Site Tagline
+title : Jayson Falkner
+tagline: Hello, Jayson
 author :
-  name : Name Lastname
-  email : blah@email.test
-  github : username
-  twitter : username
-  feedburner : feedname
+  name : Jayson Falkner
+  email : jfalkner@gmail.com
+  github : jfalkner
+  twitter : jaysonfalkner
+#  feedburner : feedname
 
 # The production_url is only used when full-domain names are needed
 # such as sitemap.txt 
@@ -26,7 +26,7 @@ author :
 # Else if you are pushing to username.github.io, replace with your username.
 # Finally if you are pushing to a GitHub project page, include the project name at the end.
 #
-production_url : http://username.github.io
+production_url : http://jfalkner.github.io
 
 # All Jekyll-Bootstrap specific configurations are namespaced into this hash
 #
